# Vita-HUD-New

./: README.md
.github/workflows/: main.yml
VitaHUD_PAF_v1/: CMakeLists.txt  README.md  README_INSTALL.txt  REAL_PAF_SETUP.md  package_artifact.sh
VitaHUD_PAF_v1/VitaHUD_Shell/: global.h  hud.cpp  hud.h  main.cpp  menu.cpp  menu.h  paf_compat.h  paf_real_notes.h  profile.cpp
VitaHUD_PAF_v1/VitaHUD_Shell/RES_RCO/: README_RES_RCO.txt  vitahud_plugin.xml
VitaHUD_PAF_v1/VitaHUD_Shell/RES_RCO/locale/: vitahud_locale_en.xml
VitaHUD_PAF_v1/src/: main.c
VitaHUD_PAF_v1_skeleton/VitaHUD_PAF_v1/: CMakeLists.txt
VitaHUD_PAF_v1_skeleton/VitaHUD_PAF_v1/VitaHUD_Shell/: menu.cpp  profile.h
